--- a/index.haml
+++ b/index.haml
@@ -31,19 +31,19 @@
         
         .moo-panel#geolocalization
             %h2 Geolocalization
-            %h3 This module is not activated. See $.geolocation
+            %h3 This demo is not implemented yet.
 
         .moo-panel#data
             %h2 Data
-            %h3 This module is not implemented yet.
+            %h3 This demo is not implemented yet.
 
         .moo-panel#graph
             %h2 Graph
-            %h3 This module is not implemented yet.
+            %h3 This demo is not implemented yet.
  
         .moo-panel#carousel
             %h2 Carousel
-            %h3 This module is not implemented yet.
+            %h3 This demo is not implemented yet.
 
 :javascript    
 
@@ -66,6 +66,6 @@
            });
            
            // Preload a view
-           // myApp.load(myApp.views[0], myNav.get("ui"));           
+           myApp.load(myApp.views[0], myNav.get("ui"));           
                                   
        });
