--- a/views/ui/ui.haml
+++ b/views/ui/ui.haml
@@ -1,17 +1,15 @@
 %form.moo-ui-form{:action=>"", :method=>"post"}
     .moo-field
         %label Switch
-        .moo-ui-switch#moo-ui-switch-1
-            %input{:type=>"checkbox", :name=>"switch1" ,:value=>"1"}  
+        %input#moo-ui-switch-1{:type=>"checkbox", :name=>"switch1" ,:value=>"1"}  
+
     .moo-field
         %label Text
-        .moo-ui-text#moo-ui-text-1
-            %input{:type=>"text", :name=>"text1" ,:placeholder=>"Ingrese su texto aqui"}
+        %input#moo-ui-text-1{:type=>"text", :name=>"text1" ,:placeholder=>"Ingrese su texto aqui"}
        
     .moo-field
         %label TextArea
-        .moo-ui-textarea
-            %textarea#moo-ui-textarea-1{:name=>"textarea1" ,:placeholder=>"Ingrese su texto aqui"}
+        %textarea#moo-ui-textarea-1{:name=>"textarea1" ,:placeholder=>"Ingrese su texto aqui"}
 
     .moo-field
         %label Select
@@ -33,7 +31,6 @@
     .moo-field
         %legend 
             Radio
-
         %fieldset#moo-ui-radio-1
             %label{:for=>"radio0"} Option 0
             %input{:type=>"radio", :name=>"radios", :id=>"radio0" ,:value=>"0"}
