--- a/views/ui/ui.html
+++ b/views/ui/ui.html
@@ -1,21 +1,15 @@
 <form action='' class='moo-ui-form' method='post'>
   <div class='moo-field'>
     <label>Switch</label>
-    <div class='moo-ui-switch' id='moo-ui-switch-1'>
-      <input name='switch1' type='checkbox' value='1' />
-    </div>
+    <input id='moo-ui-switch-1' name='switch1' type='checkbox' value='1' />
   </div>
   <div class='moo-field'>
     <label>Text</label>
-    <div class='moo-ui-text' id='moo-ui-text-1'>
-      <input name='text1' placeholder='Ingrese su texto aqui' type='text' />
-    </div>
+    <input id='moo-ui-text-1' name='text1' placeholder='Ingrese su texto aqui' type='text' />
   </div>
   <div class='moo-field'>
     <label>TextArea</label>
-    <div class='moo-ui-textarea'>
-      <textarea id='moo-ui-textarea-1' name='textarea1' placeholder='Ingrese su texto aqui'></textarea>
-    </div>
+    <textarea id='moo-ui-textarea-1' name='textarea1' placeholder='Ingrese su texto aqui'></textarea>
   </div>
   <div class='moo-field'>
     <label>Select</label>
