--- a/index-phonegap.haml
+++ b/index-phonegap.haml
@@ -3,15 +3,13 @@
     %title Mootor demo
     %meta{:name=>"viewport", :content=>"width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
-    %script{:src=>"phonegap/cordova-1.9.0.js", :type=>"text/javascript"}
     %script{:src=>"js/mootor.js",:type=>"text/javascript"}
-    %script{:src=>"js/plugins/nav.js",:type=>"text/javascript"}
-    %script{:src=>"js/plugins/app.js",:type=>"text/javascript"}
-
+    %script{:src=>"phonegap/cordova-1.9.0.js",:type=>"text/javascript"}
+    
 %body.main
 
     %header#moo-header.moo-header
-        %h1 Mootor demo (phonegap)
+        %h1 Mootor
         %nav
             %a.moo-nav-back{:href=>"", :rel=>"back"} Back
 
@@ -40,23 +38,31 @@
        $(document).ready(function(){
        
            "use strict";
-       
-           // Navigation panels
-           window.myNav = $("#panels").nav();
-       
-           // Application
-           var myApp = $.app({
-               views: [
-                    "ui",
-                    "nav",
-                    "item1",
-                    "item2",
-                    "picture"
-               ],
-               nav: myNav
-           });
            
-           // Preload a view           
-           myApp.load(myApp.views[0], myNav.get("ui"));
+           $.require("js/plugins/nav.js", function() {
+       
+               // Navigation panels
+               var myNav = $("#panels").nav();
+           
+               // Application
+               $.require("js/plugins/app.js", function() {
+               
+                   var myApp = $.app({
+                       views: [
+                            "ui",
+                            "nav",
+                            "item1",
+                            "item2",
+                            "picture"
+                       ],
+                       nav: myNav
+                   });
                    
+                   myApp.load( myApp.views[0], {
+                       nav: myNav.get("ui")
+                   });
+                                      
+               });
+                   
+          });
        });
