Bugfixes (update old HTML)

--- a/index.haml
+++ b/index.haml
@@ -9,8 +9,8 @@
     %script{:src=>"js/plugins/ui.js",:type=>"text/javascript"}
 %body.main
 
-    %header#header.moo-header
-        %h1 Mootor demo
+    %header#moo-header.moo-header
+        %h1 Mootor
         %nav
             %a.moo-nav-back{:href=>"", :rel=>"back"} Back
 
