--- a/_source/css/sass/_mootor.ui.switch.scss
+++ b/_source/css/sass/_mootor.ui.switch.scss
@@ -2,7 +2,8 @@
 // Switch
 
 .moo-ui-switch {
-    @include background-image(linear-gradient(top, #888, #bbb 65%));
+    @include background-image(linear-gradient(top, #ddd, #fff 45%));
+    //@include background-image(linear-gradient(top, #888, #bbb 65%));
     border: 1px solid #666;
     border-radius: 0.5em;
     @include float-right;
@@ -15,47 +16,55 @@
         font-weight: 700;
         line-height: 150%;
         text-align: center;
-        @include background-image(linear-gradient(top, #fff, #dedede));
-        border: 1px solid #666;
-        border-radius: 0.33em;
         display: block;
         position: relative;
-        width: 1.9em;
-        height: 100%;
+        height: auto;
+        width: auto;
         -webkit-transition-duration: .25s;
         -webkit-transform: translate3d(3.85em, 0, 0);
-        &:before { 
-            content: "I";
+        .moo-button {
+            @include background-image(linear-gradient(top, #fff, #dedede));
+            border: 1px solid #666;
+            border-radius: 0.45em;
+            display: block;
+            position: relative;
+            width: 2em;
+            width: 2em;
+            height: 2em;
+            top: -0.2em;
+        }
+        .moo-before { 
+            //content: "I";
             border-radius: 0.35em 0 0 0.35em;
-            //background-color: rgba(66,66,66,.5);
+            background-color: rgba(66,66,66,.5);
             color: #FFF;
             font-weight: 700;
+            line-height: 175%;
             display: block;
-            height: 100%;
-            width: 4.15em;
-            position: relative;
-            top: 0;
+            width: 4.25em;
+            position: absolute;
+            top: -0.1em;
             left: -4.15em;
             z-index: -1;
         }
-        &:after {
-            content: "O";
-            line-height: 150%;
+        .moo-after {
+            //content: "O";
             //background: rgba(200, 0, 0, 0.3);
             border-radius: 0 0.35em 0.35em 0;
             color: #333;
             display: block;
+            line-height: 175%;
             position: absolute;
-            right: -4.15em;
+            right: -0.3em;
             top: 0;
             height: 100%;
             width: 4.15em;
         }
     }
     &.moo-off{
-        @include background-image(linear-gradient(top, #ddd, #fff 45%));
+       // @include background-image(linear-gradient(top, #ddd, #fff 45%));
         b {
-            -webkit-transform: translate3d(0, 0, 0);
+            -webkit-transform: translate3d(-0.15em, 0, 0);
         }
     }
 
