--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /* ==========================================================================
    CSS Normalization, based on
    normalize.css 2012-07-07T09:50 UTC - http://github.com/necolas/normalize.css 
@@ -732,12 +731,12 @@ a:focus {
 
 /* line 4, ../_source/css/sass/_mootor.ui.switch.scss */
 .moo-ui-switch {
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #888888), color-stop(65%, #bbbbbb));
-  background-image: -webkit-linear-gradient(top, #888888, #bbbbbb 65%);
-  background-image: -moz-linear-gradient(top, #888888, #bbbbbb 65%);
-  background-image: -o-linear-gradient(top, #888888, #bbbbbb 65%);
-  background-image: -ms-linear-gradient(top, #888888, #bbbbbb 65%);
-  background-image: linear-gradient(top, #888888, #bbbbbb 65%);
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(45%, #ffffff));
+  background-image: -webkit-linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: -moz-linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: -o-linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: -ms-linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: linear-gradient(top, #dddddd, #ffffff 45%);
   border: 1px solid #666;
   border-radius: 0.5em;
   display: inline;
@@ -747,12 +746,21 @@ a:focus {
   width: 9em;
   height: 2.8em;
 }
-/* line 13, ../_source/css/sass/_mootor.ui.switch.scss */
+/* line 14, ../_source/css/sass/_mootor.ui.switch.scss */
 .moo-ui-switch b {
   font-size: 1.5em;
   font-weight: 700;
   line-height: 150%;
   text-align: center;
+  display: block;
+  position: relative;
+  height: auto;
+  width: auto;
+  -webkit-transition-duration: .25s;
+  -webkit-transform: translate3d(3.8em, 0, 0);
+}
+/* line 25, ../_source/css/sass/_mootor.ui.switch.scss */
+.moo-ui-switch b .moo-button {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #dedede));
   background-image: -webkit-linear-gradient(top, #ffffff, #dedede);
   background-image: -moz-linear-gradient(top, #ffffff, #dedede);
@@ -760,51 +768,41 @@ a:focus {
   background-image: -ms-linear-gradient(top, #ffffff, #dedede);
   background-image: linear-gradient(top, #ffffff, #dedede);
   border: 1px solid #666;
-  border-radius: 0.33em;
+  border-radius: 0.45em;
   display: block;
   position: relative;
-  width: 1.9em;
-  height: 100%;
-  -webkit-transition-duration: .25s;
-  -webkit-transform: translate3d(3.85em, 0, 0);
+  width: 2em;
+  width: 2em;
+  height: 2em;
+  top: -0.2em;
 }
-/* line 27, ../_source/css/sass/_mootor.ui.switch.scss */
-.moo-ui-switch b:before {
-  content: "I";
+/* line 36, ../_source/css/sass/_mootor.ui.switch.scss */
+.moo-ui-switch b .moo-before {
   border-radius: 0.35em 0 0 0.35em;
+  background-color: rgba(66, 66, 66, 0.5);
   color: #FFF;
   font-weight: 700;
+  line-height: 175%;
   display: block;
-  height: 100%;
-  width: 4.15em;
-  position: relative;
-  top: 0;
+  width: 4.25em;
+  position: absolute;
+  top: -0.1em;
   left: -4.15em;
   z-index: -1;
 }
-/* line 41, ../_source/css/sass/_mootor.ui.switch.scss */
-.moo-ui-switch b:after {
-  content: "O";
-  line-height: 150%;
+/* line 50, ../_source/css/sass/_mootor.ui.switch.scss */
+.moo-ui-switch b .moo-after {
   border-radius: 0 0.35em 0.35em 0;
   color: #333;
   display: block;
+  line-height: 175%;
   position: absolute;
-  right: -4.15em;
+  right: -0.3em;
   top: 0;
   height: 100%;
   width: 4.15em;
 }
-/* line 55, ../_source/css/sass/_mootor.ui.switch.scss */
-.moo-ui-switch.moo-off {
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(45%, #ffffff));
-  background-image: -webkit-linear-gradient(top, #dddddd, #ffffff 45%);
-  background-image: -moz-linear-gradient(top, #dddddd, #ffffff 45%);
-  background-image: -o-linear-gradient(top, #dddddd, #ffffff 45%);
-  background-image: -ms-linear-gradient(top, #dddddd, #ffffff 45%);
-  background-image: linear-gradient(top, #dddddd, #ffffff 45%);
-}
-/* line 57, ../_source/css/sass/_mootor.ui.switch.scss */
+/* line 66, ../_source/css/sass/_mootor.ui.switch.scss */
 .moo-ui-switch.moo-off b {
   -webkit-transform: translate3d(0, 0, 0);
 }
