Switch UI control with onMove events, .gitignore for compiled files, Core gestures improvements (flag for X axis movements)

--- a/index.haml
+++ b/index.haml
@@ -66,6 +66,6 @@
            });
            
            // Preload a view
-           // myApp.load(myApp.views[0], myNav.get("ui"));           
+           myApp.load(myApp.views[0], myNav.get("ui"));           
                                   
        });
