--- a/_source/css/sass/_mootor.nav.scss
+++ b/_source/css/sass/_mootor.nav.scss
@@ -83,10 +83,7 @@ nav {
     -webkit-transform:translate3d(0,0,0);
 }
 
-a,
-a:hover,
-a:focus {
-    // No decorations on anchors (Android) 
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
-}
+// section imports 
 
+// Tabs navigation 
+@import "mootor.nav.tabs";
