--- a/css/src/styles.scss
+++ b/css/src/styles.scss
@@ -12,6 +12,8 @@
 @import "../../_source/css/sass/_mootor.nav.scss";
 @import "../../_source/css/sass/_mootor.ui.scss";
 
+@import "sprites";
+@import "sprites-demo";
 // Navigation
 
 .moo-panel {
