Nav bugfixes (remove font-size from Select styles), draft for Camera PhoneGap example

--- a/index-phonegap.haml
+++ b/index-phonegap.haml
@@ -19,13 +19,13 @@
             %nav
                 %a.moo-nav{:href=>"", :rel=>"nav"} Nav
                 %a.moo-nav{:href=>"", :rel=>"ui"} UI
-                %a.moo-nav{:href=>"", :rel=>"picture"} Picture
+                %a.moo-nav{:href=>"", :rel=>"camera"} Camera
                     
         .moo-panel#ui
         .moo-panel#nav
         .moo-panel#item1
         .moo-panel#item2        
-        .moo-panel#picture
+        .moo-panel#camera
 
 :javascript    
 
