--- a/_source/css/sass/_mootor.ui.modal.scss
+++ b/_source/css/sass/_mootor.ui.modal.scss
@@ -20,8 +20,12 @@
     color: #333;
     padding: 0.5em;
     position: relative;
-    top: -10em;
-    left: -15em;
+
+    top: 10em;
+    left: 5em;
+
+    //top: -10em;
+    //left: -15em;
     width: 31em;
     height: auto;
     z-index: 1500;
