Bugfixes, code & files clean.

--- a/examples/index.haml
+++ b/examples/index.haml
@@ -43,6 +43,7 @@
        
            // Application
            myApp = $.app({
+               path: "views",
                views: [
                     "ui",
                     "nav",
